refactor: rename Room to Conversation
