# server/src/models/Message.ts
@@ -1,11 +1,11 @@
 import mongoose, { Schema, Document } from "mongoose";
 import type { PopulatedDoc } from "mongoose";
-import type { IRoom } from "./Room.js";
+import type { IConversation } from "./Conversation.js";
 import type { IUser } from "./User.js";
 
 export interface IMessage extends Document {
     id: string;
-    room: PopulatedDoc<IRoom>;
+    conversation: PopulatedDoc<IConversation>;
     sender: PopulatedDoc<IUser>;
     content: string;
     type: "text" | "image";
@@ -14,9 +14,9 @@ export interface IMessage extends Document {
 
 const messageSchema = new Schema<IMessage>(
     {
-        room: {
+        conversation: {
             type: Schema.Types.ObjectId,
-            ref: "Room",
+            ref: "Conversation",
             required: true,
             index: true,
         },
