# server/src/routes/v1/index.ts
@@ -1,12 +1,12 @@
 import { Router } from "express";
 import authRoutes from "./auth.routes.js";
 import userRoutes from "./user.routes.js";
-import roomRoutes from "./room.routes.js";
+import conversationRoutes from "./conversation.routes.js";
 
 const router: Router = Router();
 
 router.use("/auth", authRoutes);
 router.use("/users", userRoutes);
-router.use("/rooms", roomRoutes);
+router.use("/conversations", conversationRoutes);
 
 export default router;
